# BlackPurpleSoker

./: Cargo.toml  README.md  ai_server.py  config.toml
src/: auth.rs  config.rs  controller.rs  error.rs  main.rs  model.rs  service.rs  user_manager.rs
static/: app.js  index.html  style.css
