[package]
name = "BlackPurpleSoker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13"
actix-governor = "0.10"
actix-files="0.6"
governor = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"